unit_conversions + duration
Calculated duration in the unit_conversions function in scaffolding for input into the calc_avg_speed function.

--- a/viz_scripts/cost_and_time_impact_estimates.ipynb
+++ b/viz_scripts/cost_and_time_impact_estimates.ipynb
@@ -196,6 +196,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7937a492",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expanded_ct.columns"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e0420cf9",
    "metadata": {},
