--- a/viz_scripts/cost_and_time_impact_estimates.ipynb
+++ b/viz_scripts/cost_and_time_impact_estimates.ipynb
@@ -198,11 +198,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7937a492",
+   "id": "9e21a643",
    "metadata": {},
    "outputs": [],
    "source": [
-    "expanded_ct.columns"
+    "expanded_ct['duration']"
    ]
   },
   {
