Discovered pre-existing duration feature
Using pre-existing duration feature now. Assuming it is in seconds.

--- a/viz_scripts/cost_and_time_impact_estimates.ipynb
+++ b/viz_scripts/cost_and_time_impact_estimates.ipynb
@@ -198,11 +198,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e21a643",
+   "id": "bec31447",
    "metadata": {},
    "outputs": [],
    "source": [
-    "expanded_ct['duration']"
+    "expanded_ct['duration_h']"
    ]
   },
   {
