Calculate Average Speed
Calculate average speed defined and tested.

--- a/viz_scripts/mapping_dictionaries.ipynb
+++ b/viz_scripts/mapping_dictionaries.ipynb
@@ -20,7 +20,7 @@
     "df_pur= pd.read_csv(r'auxiliary_files/purpose_labels.csv')\n",
     "df_re = pd.read_csv(r'auxiliary_files/mode_labels.csv')\n",
     "df_EI = pd.read_csv(r'auxiliary_files/energy_intensity.csv')\n",
-    "df_CT = pd.read_csv(r'auxiliary_files/cost_time.csv')\n",
+    "df_CT = pd.read_csv(r'auxiliary_files/cost.csv')\n",
     "\n",
     "#dictionaries:\n",
     "dic_pur = dict(zip(df_pur['purpose_confirm'],df_pur['bin_purpose'])) # bin purpose\n",
