--- a/viz_scripts/cost_and_time_impact_estimates.ipynb
+++ b/viz_scripts/cost_and_time_impact_estimates.ipynb
@@ -210,7 +210,7 @@
    "id": "e0420cf9",
    "metadata": {},
    "source": [
-    "### Analysis of Time Impact"
+    "### Analysis of Cost Impact"
    ]
   },
   {
@@ -228,7 +228,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "41460ce2",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "expanded_ct.columns"
@@ -265,21 +267,90 @@
     "eirc['boolean'] = eirc['Sketch of Total Cost_Impact($)'] > 0\n",
     "\n",
     "#eimc : energy impact mode_confirm\n",
-    "eimc=expanded_ct.groupby('Mode_confirm').agg({'Energy_Impact(kWH)': ['sum', 'mean']},)\n",
-    "eimc.columns = ['Sketch of Total Energy_Impact(kWH)', 'Sketch of Average Energy_Impact(kWH)']\n",
+    "eimc=expanded_ct.groupby('Mode_confirm').agg({'Cost_Impact($)': ['sum', 'mean']},)\n",
+    "eimc.columns = ['Sketch of Total Cost_Impact($)', 'Sketch of Average Cost_Impact($)']\n",
     "eimc = eimc.reset_index()\n",
-    "eimc = eimc.sort_values(by=['Sketch of Total Energy_Impact(kWH)'], ascending=False)\n",
+    "eimc = eimc.sort_values(by=['Sketch of Total Cost_Impact($)'], ascending=False)\n",
     "\n",
     "\n",
-    "subset1 = eirc [['Replaced_mode', 'Sketch of Total Energy_Impact(kWH)']].copy()\n",
-    "subset1.rename(columns = {'Replaced_mode':'Transport Mode','Sketch of Total Energy_Impact(kWH)':'Replaced_Mode' }, inplace=True)\n",
+    "subset1 = eirc [['Replaced_mode', 'Sketch of Total Cost_Impact($)']].copy()\n",
+    "subset1.rename(columns = {'Replaced_mode':'Transport Mode','Sketch of Total Cost_Impact($)':'Replaced_Mode' }, inplace=True)\n",
     "\n",
-    "subset2 = eimc [['Mode_confirm', 'Sketch of Total Energy_Impact(kWH)']].copy()\n",
-    "subset2.rename(columns = {'Mode_confirm':'Transport Mode','Sketch of Total Energy_Impact(kWH)':'Mode_Confirm' }, inplace=True)\n",
+    "subset2 = eimc [['Mode_confirm', 'Sketch of Total Cost_Impact($)']].copy()\n",
+    "subset2.rename(columns = {'Mode_confirm':'Transport Mode','Sketch of Total Cost_Impact($)':'Mode_Confirm' }, inplace=True)\n",
     "\n",
     "df_plot = pd.merge(subset1, subset2, on=\"Transport Mode\")\n",
     "df = pd.melt(df_plot , id_vars=['Transport Mode'], value_vars=['Replaced_Mode','Mode_Confirm'], var_name='selection')\n",
-    "df.rename(columns = {'value':'Energy Impact (kWH)'}, inplace = True)"
+    "df.rename(columns = {'value':'Cost Impact ($)'}, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e5aba5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df78180e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df= df.sort_values(by=['Cost Impact ($)'], ascending=False)\n",
+    "x= 'Cost Impact ($)'\n",
+    "y= 'Transport Mode'\n",
+    "color = 'selection'\n",
+    "plot_title=\"Sketch of Cost Impact ($) by Transport Mode\\n%s\" % quality_text\n",
+    "file_name ='sketch_all_cost_impact%s.png' % file_suffix\n",
+    "overeall_energy_impact(x,y,color,df,plot_title,file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5da0d49b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net_cost_saved = round(sum(eirc['Sketch of Total Cost_Impact($)']), 2)\n",
+    "\n",
+    "x = eirc['Sketch of Total Cost_Impact($)']\n",
+    "y = eirc['Replaced_mode']\n",
+    "color =eirc['boolean']\n",
+    "\n",
+    "plot_title=\"Sketch of Cost Impact for all confirmed trips \\n Contribution by mode towards a total of %s ($) \\n%s\" % (net_cost_saved, quality_text)\n",
+    "file_name ='sketch_all_mode_cost_impact%s.png' % file_suffix\n",
+    "energy_impact(x,y,color,plot_title,file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcff73a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_eb = expanded_ct.query(\"Mode_confirm == 'Pilot ebike'\")\n",
+    "# ebei : ebike energy impact\n",
+    "ebei=data_eb.groupby('Replaced_mode').agg({'Cost_Impact($)': ['sum', 'mean']},)\n",
+    "ebei.columns = ['Sketch of Total Cost_Impact($)', 'Sketch of Average Cost_Impact($)']\n",
+    "ebei= ebei.reset_index()\n",
+    "ebei = ebei.sort_values(by=['Sketch of Total Cost_Impact($)'], ascending=False)\n",
+    "ebei['boolean'] = ebei['Sketch of Total Cost_Impact($)'] > 0\n",
+    "net_energy_saved = round(sum(ebei['Sketch of Total Cost_Impact($)']), 2)\n",
+    "\n",
+    "x = ebei['Sketch of Total Cost_Impact($)']\n",
+    "y = ebei['Replaced_mode']\n",
+    "color =ebei['boolean']\n",
+    "\n",
+    "plot_title=\"Sketch of Cost Impact of E-Bike trips\\n Contribution by replaced mode towards a total of %s ($)\\n %s\" % (net_energy_saved, quality_text)\n",
+    "file_name ='sketch_cost_impact_ebike%s.png' % file_suffix\n",
+    "energy_impact(x,y,color,plot_title,file_name)"
    ]
   },
   {
@@ -296,7 +367,128 @@
    "id": "3065d606",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "trash, df_T = scaffolding.calc_avg_speed(expanded_ct, 'distance_miles','duration_h', 'Mode_confirm')\n",
+    "expanded_ct = scaffolding.time(expanded_ct, df_T, 'distance','Replaced_mode', 'Mode_confirm')\n",
+    "expanded_ct = scaffolding.time_impact(expanded_ct, 'distance_miles','Replaced_mode', 'Mode_confirm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74e5546d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=expanded_ct.loc[(expanded_ct['distance_miles'] <= 40)].sort_values(by=['Cost_Impact($)'], ascending=False)   \n",
+    "x='Cost_Impact($)'\n",
+    "y='distance_miles'\n",
+    "legend ='Mode_confirm'\n",
+    "plot_title=\"Sketch of Cost_Impact($) by Travel Mode Selected\\n%s\" % quality_text\n",
+    "file_name ='sketch_distance_cost_impact%s.png' % file_suffix\n",
+    "distancevsenergy(data,x,y,legend,plot_title,file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3125b5d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#eirp : energy impact replaced_mode\n",
+    "eirc=expanded_ct.groupby('Replaced_mode').agg({'Cost_Impact($)': ['sum', 'mean']},)\n",
+    "eirc.columns = ['Sketch of Total Cost_Impact($)', 'Sketch of Average Cost_Impact($)']\n",
+    "eirc = eirc.reset_index()\n",
+    "eirc = eirc.sort_values(by=['Sketch of Total Cost_Impact($)'], ascending=False)\n",
+    "eirc['boolean'] = eirc['Sketch of Total Cost_Impact($)'] > 0\n",
+    "\n",
+    "#eimc : energy impact mode_confirm\n",
+    "eimc=expanded_ct.groupby('Mode_confirm').agg({'Cost_Impact($)': ['sum', 'mean']},)\n",
+    "eimc.columns = ['Sketch of Total Cost_Impact($)', 'Sketch of Average Cost_Impact($)']\n",
+    "eimc = eimc.reset_index()\n",
+    "eimc = eimc.sort_values(by=['Sketch of Total Cost_Impact($)'], ascending=False)\n",
+    "\n",
+    "\n",
+    "subset1 = eirc [['Replaced_mode', 'Sketch of Total Cost_Impact($)']].copy()\n",
+    "subset1.rename(columns = {'Replaced_mode':'Transport Mode','Sketch of Total Cost_Impact($)':'Replaced_Mode' }, inplace=True)\n",
+    "\n",
+    "subset2 = eimc [['Mode_confirm', 'Sketch of Total Cost_Impact($)']].copy()\n",
+    "subset2.rename(columns = {'Mode_confirm':'Transport Mode','Sketch of Total Cost_Impact($)':'Mode_Confirm' }, inplace=True)\n",
+    "\n",
+    "df_plot = pd.merge(subset1, subset2, on=\"Transport Mode\")\n",
+    "df = pd.melt(df_plot , id_vars=['Transport Mode'], value_vars=['Replaced_Mode','Mode_Confirm'], var_name='selection')\n",
+    "df.rename(columns = {'value':'Cost Impact ($)'}, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2769f502",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db91fd02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df= df.sort_values(by=['Cost Impact ($)'], ascending=False)\n",
+    "x= 'Cost Impact ($)'\n",
+    "y= 'Transport Mode'\n",
+    "color = 'selection'\n",
+    "plot_title=\"Sketch of Cost Impact ($) by Transport Mode\\n%s\" % quality_text\n",
+    "file_name ='sketch_all_cost_impact%s.png' % file_suffix\n",
+    "overeall_energy_impact(x,y,color,df,plot_title,file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54e1b96c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net_cost_saved = round(sum(eirc['Sketch of Total Cost_Impact($)']), 2)\n",
+    "\n",
+    "x = eirc['Sketch of Total Cost_Impact($)']\n",
+    "y = eirc['Replaced_mode']\n",
+    "color =eirc['boolean']\n",
+    "\n",
+    "plot_title=\"Sketch of Cost Impact for all confirmed trips \\n Contribution by mode towards a total of %s ($) \\n%s\" % (net_cost_saved, quality_text)\n",
+    "file_name ='sketch_all_mode_cost_impact%s.png' % file_suffix\n",
+    "energy_impact(x,y,color,plot_title,file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a900d383",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_eb = expanded_ct.query(\"Mode_confirm == 'Pilot ebike'\")\n",
+    "# ebei : ebike energy impact\n",
+    "ebei=data_eb.groupby('Replaced_mode').agg({'Cost_Impact($)': ['sum', 'mean']},)\n",
+    "ebei.columns = ['Sketch of Total Cost_Impact($)', 'Sketch of Average Cost_Impact($)']\n",
+    "ebei= ebei.reset_index()\n",
+    "ebei = ebei.sort_values(by=['Sketch of Total Cost_Impact($)'], ascending=False)\n",
+    "ebei['boolean'] = ebei['Sketch of Total Cost_Impact($)'] > 0\n",
+    "net_energy_saved = round(sum(ebei['Sketch of Total Cost_Impact($)']), 2)\n",
+    "\n",
+    "x = ebei['Sketch of Total Cost_Impact($)']\n",
+    "y = ebei['Replaced_mode']\n",
+    "color =ebei['boolean']\n",
+    "\n",
+    "plot_title=\"Sketch of Cost Impact of E-Bike trips\\n Contribution by replaced mode towards a total of %s ($)\\n %s\" % (net_energy_saved, quality_text)\n",
+    "file_name ='sketch_cost_impact_ebike%s.png' % file_suffix\n",
+    "energy_impact(x,y,color,plot_title,file_name)"
+   ]
   }
  ],
  "metadata": {
