Added Time and Cost Impact Graphs
These are the analysis results. The graphs are in a clean state. There is more cleaning that can be done in code, but analysis done.

--- a/viz_scripts/cost_and_time_impact_estimates.ipynb
+++ b/viz_scripts/cost_and_time_impact_estimates.ipynb
@@ -220,7 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "expanded_ct = scaffolding.cost(expanded_ct, df_CT, 'distance','Replaced_mode', 'Mode_confirm')\n",
+    "expanded_ct = scaffolding.cost(expanded_ct, df_CT,'Replaced_mode', 'Mode_confirm')\n",
     "expanded_ct = scaffolding.cost_impact(expanded_ct, 'distance_miles','Replaced_mode', 'Mode_confirm')"
    ]
   },
@@ -325,7 +325,7 @@
     "\n",
     "plot_title=\"Sketch of Cost Impact for all confirmed trips \\n Contribution by mode towards a total of %s ($) \\n%s\" % (net_cost_saved, quality_text)\n",
     "file_name ='sketch_all_mode_cost_impact%s.png' % file_suffix\n",
-    "energy_impact(x,y,color,plot_title,file_name)"
+    "energy_impact(x,y,color,plot_title,file_name,'Cost_Impact($)')"
    ]
   },
   {
@@ -350,7 +350,7 @@
     "\n",
     "plot_title=\"Sketch of Cost Impact of E-Bike trips\\n Contribution by replaced mode towards a total of %s ($)\\n %s\" % (net_energy_saved, quality_text)\n",
     "file_name ='sketch_cost_impact_ebike%s.png' % file_suffix\n",
-    "energy_impact(x,y,color,plot_title,file_name)"
+    "energy_impact(x,y,color,plot_title,file_name,'Cost_Impact($)')"
    ]
   },
   {
@@ -368,8 +368,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trash, df_T = scaffolding.calc_avg_speed(expanded_ct, 'distance_miles','duration_h', 'Mode_confirm')\n",
-    "expanded_ct = scaffolding.time(expanded_ct, df_T, 'distance','Replaced_mode', 'Mode_confirm')\n",
+    "trash, dura = scaffolding.calc_avg_dura(expanded_ct, 'distance_miles', 'duration_h', 'Mode_confirm')\n",
+    "df_T = pd.DataFrame(dura)\n",
+    "df_T.reset_index(inplace=True)\n",
+    "df_T.rename(columns={'Mode_confirm':'mode','D(time/PMT)':'D(hours/PMT)'}, inplace=True)\n",
+    "df_T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10cad517",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expanded_ct = scaffolding.time(expanded_ct, df_T,'Replaced_mode', 'Mode_confirm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62a3a89f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expanded_ct.rename(columns={'dura__trip_Mode_confirm':'dura__trip_mode', 'dura__trip_Replaced_mode':'dura__trip_repm'}, inplace=True)\n",
+    "expanded_ct.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3c77e24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "expanded_ct = scaffolding.time_impact(expanded_ct, 'distance_miles','Replaced_mode', 'Mode_confirm')"
    ]
   },
@@ -380,12 +413,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=expanded_ct.loc[(expanded_ct['distance_miles'] <= 40)].sort_values(by=['Cost_Impact($)'], ascending=False)   \n",
-    "x='Cost_Impact($)'\n",
+    "data=expanded_ct.loc[(expanded_ct['distance_miles'] <= 40)].sort_values(by=['Time_Impact(hours)'], ascending=False)   \n",
+    "x='Time_Impact(hours)'\n",
     "y='distance_miles'\n",
     "legend ='Mode_confirm'\n",
-    "plot_title=\"Sketch of Cost_Impact($) by Travel Mode Selected\\n%s\" % quality_text\n",
-    "file_name ='sketch_distance_cost_impact%s.png' % file_suffix\n",
+    "plot_title=\"Sketch of Time_Impact(hours) by Travel Mode Selected\\n%s\" % quality_text\n",
+    "file_name ='sketch_distance_time_impact%s.png' % file_suffix\n",
     "distancevsenergy(data,x,y,legend,plot_title,file_name)"
    ]
   },
@@ -397,28 +430,28 @@
    "outputs": [],
    "source": [
     "#eirp : energy impact replaced_mode\n",
-    "eirc=expanded_ct.groupby('Replaced_mode').agg({'Cost_Impact($)': ['sum', 'mean']},)\n",
-    "eirc.columns = ['Sketch of Total Cost_Impact($)', 'Sketch of Average Cost_Impact($)']\n",
+    "eirc=expanded_ct.groupby('Replaced_mode').agg({'Time_Impact(hours)': ['sum', 'mean']},)\n",
+    "eirc.columns = ['Sketch of Total Time_Impact(hours)', 'Sketch of Average Time_Impact(hours)']\n",
     "eirc = eirc.reset_index()\n",
-    "eirc = eirc.sort_values(by=['Sketch of Total Cost_Impact($)'], ascending=False)\n",
-    "eirc['boolean'] = eirc['Sketch of Total Cost_Impact($)'] > 0\n",
+    "eirc = eirc.sort_values(by=['Sketch of Total Time_Impact(hours)'], ascending=False)\n",
+    "eirc['boolean'] = eirc['Sketch of Total Time_Impact(hours)'] > 0\n",
     "\n",
     "#eimc : energy impact mode_confirm\n",
-    "eimc=expanded_ct.groupby('Mode_confirm').agg({'Cost_Impact($)': ['sum', 'mean']},)\n",
-    "eimc.columns = ['Sketch of Total Cost_Impact($)', 'Sketch of Average Cost_Impact($)']\n",
+    "eimc=expanded_ct.groupby('Mode_confirm').agg({'Time_Impact(hours)': ['sum', 'mean']},)\n",
+    "eimc.columns = ['Sketch of Total Time_Impact(hours)', 'Sketch of Average Time_Impact(hours)']\n",
     "eimc = eimc.reset_index()\n",
-    "eimc = eimc.sort_values(by=['Sketch of Total Cost_Impact($)'], ascending=False)\n",
+    "eimc = eimc.sort_values(by=['Sketch of Total Time_Impact(hours)'], ascending=False)\n",
     "\n",
     "\n",
-    "subset1 = eirc [['Replaced_mode', 'Sketch of Total Cost_Impact($)']].copy()\n",
-    "subset1.rename(columns = {'Replaced_mode':'Transport Mode','Sketch of Total Cost_Impact($)':'Replaced_Mode' }, inplace=True)\n",
+    "subset1 = eirc [['Replaced_mode', 'Sketch of Total Time_Impact(hours)']].copy()\n",
+    "subset1.rename(columns = {'Replaced_mode':'Transport Mode','Sketch of Total Time_Impact(hours)':'Replaced_Mode' }, inplace=True)\n",
     "\n",
-    "subset2 = eimc [['Mode_confirm', 'Sketch of Total Cost_Impact($)']].copy()\n",
-    "subset2.rename(columns = {'Mode_confirm':'Transport Mode','Sketch of Total Cost_Impact($)':'Mode_Confirm' }, inplace=True)\n",
+    "subset2 = eimc [['Mode_confirm', 'Sketch of Total Time_Impact(hours)']].copy()\n",
+    "subset2.rename(columns = {'Mode_confirm':'Transport Mode','Sketch of Total Time_Impact(hours)':'Mode_Confirm' }, inplace=True)\n",
     "\n",
     "df_plot = pd.merge(subset1, subset2, on=\"Transport Mode\")\n",
     "df = pd.melt(df_plot , id_vars=['Transport Mode'], value_vars=['Replaced_Mode','Mode_Confirm'], var_name='selection')\n",
-    "df.rename(columns = {'value':'Cost Impact ($)'}, inplace = True)"
+    "df.rename(columns = {'value':'Time_Impact(hours)'}, inplace = True)"
    ]
   },
   {
@@ -438,12 +471,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df= df.sort_values(by=['Cost Impact ($)'], ascending=False)\n",
-    "x= 'Cost Impact ($)'\n",
+    "df= df.sort_values(by=['Time_Impact(hours)'], ascending=False)\n",
+    "x= 'Time_Impact(hours)'\n",
     "y= 'Transport Mode'\n",
     "color = 'selection'\n",
-    "plot_title=\"Sketch of Cost Impact ($) by Transport Mode\\n%s\" % quality_text\n",
-    "file_name ='sketch_all_cost_impact%s.png' % file_suffix\n",
+    "plot_title=\"Sketch of Time_Impact(hours) by Transport Mode\\n%s\" % quality_text\n",
+    "file_name ='sketch_all_time_impact%s.png' % file_suffix\n",
     "overeall_energy_impact(x,y,color,df,plot_title,file_name)"
    ]
   },
@@ -454,15 +487,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "net_cost_saved = round(sum(eirc['Sketch of Total Cost_Impact($)']), 2)\n",
+    "net_cost_saved = round(sum(eirc['Sketch of Total Time_Impact(hours)']), 2)\n",
     "\n",
-    "x = eirc['Sketch of Total Cost_Impact($)']\n",
+    "x = eirc['Sketch of Total Time_Impact(hours)']\n",
     "y = eirc['Replaced_mode']\n",
     "color =eirc['boolean']\n",
     "\n",
-    "plot_title=\"Sketch of Cost Impact for all confirmed trips \\n Contribution by mode towards a total of %s ($) \\n%s\" % (net_cost_saved, quality_text)\n",
-    "file_name ='sketch_all_mode_cost_impact%s.png' % file_suffix\n",
-    "energy_impact(x,y,color,plot_title,file_name)"
+    "plot_title=\"Sketch of Time Impact for all confirmed trips \\n Contribution by mode towards a total of %s (hours) \\n%s\" % (net_cost_saved, quality_text)\n",
+    "file_name ='sketch_all_mode_time_impact%s.png' % file_suffix\n",
+    "energy_impact(x,y,color,plot_title,file_name,'Time_Impact(hours)')"
    ]
   },
   {
@@ -474,21 +507,45 @@
    "source": [
     "data_eb = expanded_ct.query(\"Mode_confirm == 'Pilot ebike'\")\n",
     "# ebei : ebike energy impact\n",
-    "ebei=data_eb.groupby('Replaced_mode').agg({'Cost_Impact($)': ['sum', 'mean']},)\n",
-    "ebei.columns = ['Sketch of Total Cost_Impact($)', 'Sketch of Average Cost_Impact($)']\n",
+    "ebei=data_eb.groupby('Replaced_mode').agg({'Time_Impact(hours)': ['sum', 'mean']},)\n",
+    "ebei.columns = ['Sketch of Total Time_Impact(hours)', 'Sketch of Average Time_Impact(hours)']\n",
     "ebei= ebei.reset_index()\n",
-    "ebei = ebei.sort_values(by=['Sketch of Total Cost_Impact($)'], ascending=False)\n",
-    "ebei['boolean'] = ebei['Sketch of Total Cost_Impact($)'] > 0\n",
-    "net_energy_saved = round(sum(ebei['Sketch of Total Cost_Impact($)']), 2)\n",
+    "ebei = ebei.sort_values(by=['Sketch of Total Time_Impact(hours)'], ascending=False)\n",
+    "ebei['boolean'] = ebei['Sketch of Total Time_Impact(hours)'] > 0\n",
+    "net_energy_saved = round(sum(ebei['Sketch of Total Time_Impact(hours)']), 2)\n",
     "\n",
-    "x = ebei['Sketch of Total Cost_Impact($)']\n",
+    "x = ebei['Sketch of Total Time_Impact(hours)']\n",
     "y = ebei['Replaced_mode']\n",
     "color =ebei['boolean']\n",
     "\n",
-    "plot_title=\"Sketch of Cost Impact of E-Bike trips\\n Contribution by replaced mode towards a total of %s ($)\\n %s\" % (net_energy_saved, quality_text)\n",
-    "file_name ='sketch_cost_impact_ebike%s.png' % file_suffix\n",
-    "energy_impact(x,y,color,plot_title,file_name)"
+    "plot_title=\"Sketch of Time Impact of E-Bike trips\\n Contribution by replaced mode towards a total of %s (hours)\\n %s\" % (net_energy_saved, quality_text)\n",
+    "file_name ='sketch_time_impact_ebike%s.png' % file_suffix\n",
+    "energy_impact(x,y,color,plot_title,file_name,'Time_Impact(hours)')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f72cf4eb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf000764",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d71c5bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
