--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -192,8 +192,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "expanded_ct = scaffolding.energy_intensity(expanded_ct, df_EI, 'distance','Replaced_mode', 'Mode_confirm')\n",
-    "expanded_ct = scaffolding.energy_impact_kWH(expanded_ct, 'distance_miles','Replaced_mode', 'Mode_confirm')"
+    "expanded_ct = scaffolding.energy_intensity(expanded_ct, df_EI, 'Replaced_mode', 'Mode_confirm')\n",
+    "expanded_ct = scaffolding.energy_impact_kWH(expanded_ct, 'distance_miles', 'Replaced_mode', 'Mode_confirm')"
    ]
   },
   {
