Refactor energy_impact

--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -250,7 +250,6 @@
     "eimc = eimc.reset_index()\n",
     "eimc = eimc.sort_values(by=['Sketch of Total Energy_Impact(kWH)'], ascending=False)\n",
     "\n",
-    "\n",
     "subset1 = eirc [['Replaced_mode', 'Sketch of Total Energy_Impact(kWH)']].copy()\n",
     "subset1.rename(columns = {'Replaced_mode':'Transport Mode','Sketch of Total Energy_Impact(kWH)':'Replaced_Mode' }, inplace=True)\n",
     "\n",
@@ -313,7 +312,7 @@
     "\n",
     "plot_title=\"Sketch of Energy Impact for all confirmed trips \\n Contribution by mode towards a total of %s (kWH) \\n%s\" % (net_energy_saved, quality_text)\n",
     "file_name ='sketch_all_mode_energy_impact%s.png' % file_suffix\n",
-    "energy_impact(x,y,color,plot_title,file_name)"
+    "impact_plot(x,y,color,plot_title,file_name,'Energy_Impact(kWH)')"
    ]
   },
   {
@@ -348,7 +347,7 @@
     "\n",
     "plot_title=\"Sketch of Energy Impact of E-Bike trips\\n Contribution by replaced mode towards a total of %s (kWH)\\n %s\" % (net_energy_saved, quality_text)\n",
     "file_name ='sketch_energy_impact_ebike%s.png' % file_suffix\n",
-    "energy_impact(x,y,color,plot_title,file_name)"
+    "impact_plot(x,y,color,plot_title,file_name,'Energy_Impact(kWH)')"
    ]
   },
   {
@@ -390,7 +389,6 @@
     "co2rp= co2rp.sort_values(by=['total_lb_CO2_emissions'], ascending=False)\n",
     "co2rp['boolean'] = co2rp['total_lb_CO2_emissions'] > 0\n",
     "\n",
-    "\n",
     "net_CO2_saved = round(sum(co2rp['total_lb_CO2_emissions']), 2)\n",
     "\n",
     "x = co2rp['total_lb_CO2_emissions']\n",
@@ -399,7 +397,7 @@
     "\n",
     "plot_title=\"Sketch of CO2 Emissions Impact for all confirmed trips \\n Contribution by mode towards a total of %s (kWH) \\n%s\" % (net_CO2_saved, quality_text)\n",
     "file_name ='sketch_all_mode_CO2impact%s.png' % file_suffix\n",
-    "CO2_impact(x,y,color,plot_title,file_name)"
+    "impact_plot(x,y,color,plot_title,file_name,'CO2_Impact(lb)')"
    ]
   },
   {
@@ -432,16 +430,8 @@
     "\n",
     "plot_title=\"Sketch of Total Pounds of CO2 Emissions of E-Bike trips\\n Contribution by replaced mode towards a total of %s (lb CO2 Emissions )\\n %s\" % (net_CO2_emissions, quality_text)\n",
     "file_name ='sketch_CO2impact_ebike%s.png' % file_suffix\n",
-    "CO2_impact(x,y,color,plot_title,file_name)"
+    "impact_plot(x,y,color,plot_title,file_name,'CO2_Impact(lb)')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dbbaed62",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
