--- a/viz_scripts/cost_and_time_impact_estimates.ipynb
+++ b/viz_scripts/cost_and_time_impact_estimates.ipynb
@@ -325,7 +325,7 @@
     "\n",
     "plot_title=\"Sketch of Cost Impact for all confirmed trips \\n Contribution by mode towards a total of %s ($) \\n%s\" % (net_cost_saved, quality_text)\n",
     "file_name ='sketch_all_mode_cost_impact%s.png' % file_suffix\n",
-    "energy_impact(x,y,color,plot_title,file_name,'Cost_Impact($)')"
+    "impact_plot(x,y,color,plot_title,file_name,'Cost_Impact($)')"
    ]
   },
   {
@@ -350,7 +350,7 @@
     "\n",
     "plot_title=\"Sketch of Cost Impact of E-Bike trips\\n Contribution by replaced mode towards a total of %s ($)\\n %s\" % (net_energy_saved, quality_text)\n",
     "file_name ='sketch_cost_impact_ebike%s.png' % file_suffix\n",
-    "energy_impact(x,y,color,plot_title,file_name,'Cost_Impact($)')"
+    "impact_plot(x,y,color,plot_title,file_name,'Cost_Impact($)')"
    ]
   },
   {
@@ -495,7 +495,7 @@
     "\n",
     "plot_title=\"Sketch of Time Impact for all confirmed trips \\n Contribution by mode towards a total of %s (hours) \\n%s\" % (net_cost_saved, quality_text)\n",
     "file_name ='sketch_all_mode_time_impact%s.png' % file_suffix\n",
-    "energy_impact(x,y,color,plot_title,file_name,'Time_Impact(hours)')"
+    "impact_plot(x,y,color,plot_title,file_name,'Time_Impact(hours)')"
    ]
   },
   {
@@ -520,32 +520,8 @@
     "\n",
     "plot_title=\"Sketch of Time Impact of E-Bike trips\\n Contribution by replaced mode towards a total of %s (hours)\\n %s\" % (net_energy_saved, quality_text)\n",
     "file_name ='sketch_time_impact_ebike%s.png' % file_suffix\n",
-    "energy_impact(x,y,color,plot_title,file_name,'Time_Impact(hours)')"
+    "impact_plot(x,y,color,plot_title,file_name,'Time_Impact(hours)')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f72cf4eb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bf000764",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d71c5bd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
