Comment change, test 20-user plot, add timeseries to crontab

--- a/viz_scripts/timeseries_analysis.ipynb
+++ b/viz_scripts/timeseries_analysis.ipynb
@@ -162,7 +162,7 @@
    "outputs": [],
    "source": [
     "# Calculate energy impact\n",
-    "expanded_ct = scaffolding.energy_intensity(expanded_ct, df_EI, 'Replaced_mode', 'Mode_confirm')\n",
+    "expanded_ct = scaffolding.energy_intensity(expanded_ct, df_EI, 'distance_miles', 'Replaced_mode', 'Mode_confirm')\n",
     "expanded_ct = scaffolding.energy_impact_kWH(expanded_ct, 'distance_miles', 'Replaced_mode', 'Mode_confirm')\n",
     "expanded_ct = scaffolding.CO2_impact_lb(expanded_ct, 'distance_miles', 'Replaced_mode', 'Mode_confirm')"
    ]
@@ -217,7 +217,7 @@
    },
    "outputs": [],
    "source": [
-    "# Count the number of trips for each sensed mode\n",
+    "# Count the number of trips for each confirmed mode\n",
     "mode_counts = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False).size()\n",
     "mode_counts.rename(columns={'size':'trip_count'}, inplace=True)\n",
     "\n",
@@ -252,15 +252,6 @@
    "metadata": {},
    "source": [
     "### Generate Timeseries Plots"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_suffix = scaffolding.get_file_suffix(year, month, program)"
    ]
   },
   {
@@ -432,7 +423,10 @@
    "source": [
     "# Plot of ebike mode share across many individual users\n",
     "# This plot is a little crazy if the number of users displayed is not limited\n",
-    "plot_data = mode_distance[mode_distance['Mode_confirm']=='Pilot ebike']\n",
+    "# For now use the first 20 IDs\n",
+    "test_uuids = pd.unique(mode_distance['user_id'])[:19]\n",
+    "plot_data = mode_distance[mode_distance['user_id'].isin(test_uuids)]\n",
+    "plot_data = plot_data[plot_data['Mode_confirm']=='Pilot ebike']\n",
     "plot_data = plot_data.groupby(['user_id','date_time'], as_index=False)['distance_miles_smooth'].sum()\n",
     "total_miles = mode_distance.groupby(['user_id','date_time'], as_index=False)['distance_miles_smooth'].sum()\n",
     "plot_data = plot_data.merge(total_miles, on=['user_id','date_time'])\n",
@@ -440,7 +434,7 @@
     "plot_data['user_id'] = plot_data['user_id'].astype(str).str[-4:]\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(16,4))\n",
-    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='miles_proportion', hue='user_id', legend=False).set(title='Daily Ebike Mileage Proportion (Individual)', xlabel='Date', ylabel='Proportion of User Daily Miles')\n",
+    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='miles_proportion', hue='user_id', legend=False, palette=\"Set1\").set(title='Daily Ebike Mileage Proportion (Individual)', xlabel='Date', ylabel='Proportion of User Daily Miles')\n",
     "plt.xticks(rotation=45)\n",
     "plt.subplots_adjust(bottom=0.25)\n",
     "ax.figure.savefig(\"/plots/ts_ebike_mile_individual%s.png\" % file_suffix)"
